WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306568
[GTK] IconDatabase tries to use IconDatabaseInfo table even if it does not exist
https://bugs.webkit.org/show_bug.cgi?id=306568
Summary
[GTK] IconDatabase tries to use IconDatabaseInfo table even if it does not exist
Adrian Perez
Reported
2026-01-29 14:32:42 PST
During creation of the IconDatabase instance, a prepared statement is used to read the "Version" key from the IconDatabaseInfo table. There is no check about whether the table exists, and therefore creation of the prepared statement always fails. After logging was added in
306358@main
the logged errors made the issue clear: ene 30 00:21:21 kodama TestWebKitFaviconDatabase[2637662]: Unable to prepare version statement (1) - no such table: IconDatabaseInfo
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2026-01-29 15:30:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57515
Carlos Alberto Lopez Perez
Comment 2
2026-01-29 17:04:29 PST
***
Bug 306580
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2026-01-29 17:15:22 PST
Committed
306459@main
(19b29dbb67bb): <
https://commits.webkit.org/306459@main
> Reviewed commits have been landed. Closing PR #57515 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug