[GTK] IconDatabase tries to use IconDatabaseInfo table even if it does not exist https://bugs.webkit.org/show_bug.cgi?id=306568

Reviewed by Carlos Alberto Lopez Perez.

Check whether the IconDatabaseInfo table exists before attempting
to read data from it. When the table does not exist, the rest of
the version check code is skipped, and the table will be created
by the existing call to IconDatabase::createTablesIfNeeded() down
below.

* Source/WebKit/UIProcess/API/glib/IconDatabase.cpp:
(WebKit::IconDatabase::IconDatabase):

Canonical link: https://commits.webkit.org/306459@main